Refactor API response/request fields to use snake_case
Kinda forgot that the frontend store expects values in snake_case, and I
honestly feel like this distinction is acceptable, this way I'll know
that the field's data comes from HTTP requests, and isn't something
mutated on the FE. Thanks to Go, now my project uses all three
variations, hooray! Now I've collected all the pokemons... Wait, kebab
still remains

Previous commit makes the id field turn into ID, which is more intuitive
for go and allows me to write ids in lower-case, even for user_id, as
it's also converted into UserID
